--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -38,14 +38,14 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/roko/data/mariadb_data
+      device: /home/$USER/data//mariadb_data
   wordpress:
     name: wordpress
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /home/roko/data/wordpress_data
+      device: /home/$USER/data//wordpress_data
 
 networks:
   inception_network:
