--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,14 +2,14 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name www.asideris.42.fr asideris.42.fr;
+    server_name asideris.42.fr;
 
     ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt; 
     ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 
     ssl_protocols TLSv1.3;
 
-    index index.php;
+    index index.php index.html;
     root /var/www/wordpress;
 
     location ~ [^/]\.php(/|$) { 
