--- a/srcs/.env
+++ b/srcs/.env
@@ -2,14 +2,17 @@ WORDPRESS_NAME=inception
 WORDPRESS_USER_EMAIL=asideris@42.fr
 WORDPRESS_ROOT_LOGIN=asiderismaster
 WORDPRESS_ROOT_EMAIL=asiderismaster@42.fr
-
 USER=asideris
 DOMAIN_NAME=asideris.42.fr
 
-
-MYSQL_ROOT_PASSWORD=1312
+MYSQL_ROOT_PASSWORD=hello
 MYSQL_USER=asideris
-MYSQL_PASSWORD=1312
+MYSQL_PASSWORD=hello
+DB_NAME=AsiderisDB
+DB_USER=asideris
+DB_PASSWORD=hello
+DB_HOST=mariadb
+DB_CHARSET=utf8
 
-
-
+TABLE_PREFIX=wp_
+WP_DEBUG=false
