--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -25,7 +25,8 @@ services:
   wordpress:
       container_name: wordpress
       build: ./requirements/wordpress/
-      env_file: .env
+      env_file: 
+        - .env
       volumes:
         - wordpress:/var/www/wordpress
       networks:
